target/classes/META-INF/jkube/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Secret
  metadata:
    labels:
      app: workshop-main
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.workshop.main
    name: mysql-secret
  data:
    mysql-password: cmVkaGF0
  type: Opaque
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      prometheus.io/path: /metrics
      jkube.io/scm-url: https://github.com/snowdrop/spring-boot-bom/workshop-main
      jkube.io/issue-tracker-url: https://github.com/snowdrop/spring-boot-bom/issues
      app.openshift.io/vcs-uri: https://github.com/likhia/INTERNAL_SERVICE.git
      jkube.io/git-commit: b13f39736ff0e827b20bd2dc385893248544a83d
      app.openshift.io/vcs-ref: master
      jkube.io/git-branch: master
      prometheus.io/port: "9779"
      jkube.io/issue-system: GitHub
      prometheus.io/scrape: "true"
      jkube.io/git-url: https://github.com/likhia/INTERNAL_SERVICE.git
      jkube.io/scm-tag: 2.3.2.Beta1
    labels:
      expose: "true"
      app: workshop-main
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.workshop.main
    name: workshop-main
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: workshop-main
      provider: jkube
      group: com.workshop.main
- apiVersion: v1
  kind: ConfigMap
  metadata:
    labels:
      app: workshop-main
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.workshop.main
    name: service-config-map
  data:
    application.properties: |-
      resteasy.jaxrs.defaultPath:/api

      common.uri=services.common.svc.cluster.local:8080

      spring.datasource.url=jdbc:mysql://mysql.database.svc.cluster.local:3306/cars
      spring.datasource.username=admin
      spring.jpa.hibernate.ddl-auto=update

      spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
      spring.datasource.testOnBorrow=true
      spring.datasource.validationQuery=SELECT 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      jkube.io/git-branch: master
      jkube.io/scm-url: https://github.com/snowdrop/spring-boot-bom/workshop-main
      jkube.io/issue-system: GitHub
      jkube.io/issue-tracker-url: https://github.com/snowdrop/spring-boot-bom/issues
      jkube.io/git-url: https://github.com/likhia/INTERNAL_SERVICE.git
      app.openshift.io/vcs-uri: https://github.com/likhia/INTERNAL_SERVICE.git
      jkube.io/scm-tag: 2.3.2.Beta1
      jkube.io/git-commit: b13f39736ff0e827b20bd2dc385893248544a83d
    labels:
      app: workshop-main
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.workshop.main
    name: workshop-main
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: workshop-main
        provider: jkube
        group: com.workshop.main
    template:
      metadata:
        labels:
          app: workshop-main
          provider: jkube
          version: 1.0.0-SNAPSHOT
          group: com.workshop.main
      spec:
        containers:
        - env:
          - name: SPRING_DATASOURCE_PASSWORD
            valueFrom:
              secretKeyRef:
                key: mysql-password
                name: mysql-secret
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: workshop-main:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            successThreshold: 1
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            successThreshold: 1
          securityContext:
            privileged: false
          volumeMounts:
          - mountPath: /deployments/config
            name: config
            readOnly: true
        volumes:
        - configMap:
            items:
            - key: application.properties
              path: application.properties
            name: service-config-map
          name: config
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      jkube.io/git-branch: master
      jkube.io/scm-url: https://github.com/snowdrop/spring-boot-bom/workshop-main
      jkube.io/issue-system: GitHub
      jkube.io/issue-tracker-url: https://github.com/snowdrop/spring-boot-bom/issues
      jkube.io/git-url: https://github.com/likhia/INTERNAL_SERVICE.git
      app.openshift.io/vcs-uri: https://github.com/likhia/INTERNAL_SERVICE.git
      jkube.io/scm-tag: 2.3.2.Beta1
      jkube.io/git-commit: b13f39736ff0e827b20bd2dc385893248544a83d
      app.kubernetes.io/vcs-uri: git@github.com:snowdrop/rest-http-example.git
    labels:
      app.kubernetes.io/part-of: http-api-example
      app.openshift.io/runtime-version: 2.3.2.RELEASE
      app.kubernetes.io/name: http-api
      app.openshift.io/runtime: rh-spring-boot
      app.kubernetes.io/component: frontend
      app: workshop-main
      provider: jkube
      version: 1.0.0-SNAPSHOT
      group: com.workshop.main
    name: workshop-main
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: workshop-main
